[package]
name = "sp-op-viewer"
version = "0.1.0"
authors = ["Martin Dahl"]
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = ["image", "debug", "tokio"] }
iced_native = { git = "https://github.com/iced-rs/iced.git" }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
r2r = "0.6.2"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
sp-domain = { git = "https://github.com/sequenceplanner/sp-rust", branch = "runner_actions" }
sp-formal = { git = "https://github.com/sequenceplanner/sp-rust", branch = "runner_actions" }
